tests/suite/analyze/snapshots/suite__analyze__constant_propagation__clobbered_across_hul.snap
---
source: tests/suite/analyze/constant_propagation.rs
assertion_line: 101
expression: copy_propagation
---

clobbered_across_hul

+------------------+
|      enter:      |
| {}               |
| mov rax, 1       |
| {rax: 1}         |
| mov rdx, 2       |
| {rax: 1, rdx: 2} |
| imul _a          |
| {}               |
| jmp exit         |
| {}               |
+------------------+
  |
  |
  v
+------------------+
|      exit:       |
| {}               |
| ret              |
| {}               |
+------------------+

