tests/suite/analyze/snapshots/suite__analyze__constant_propagation__clobbered_across_mod.snap
---
source: tests/suite/analyze/constant_propagation.rs
assertion_line: 117
expression: copy_propagation
---

clobbered_across_mod

+------------------+
|      enter:      |
| {}               |
| mov rax, 1       |
| {rax: 1}         |
| mov rdx, 2       |
| {rax: 1, rdx: 2} |
| idiv _a          |
| {}               |
| jmp exit         |
| {}               |
+------------------+
  |
  |
  v
+------------------+
|      exit:       |
| {}               |
| ret              |
| {}               |
+------------------+

