tests/suite/analyze/snapshots/suite__analyze__constant_propagation__clobbered_across_mul.snap
---
source: tests/suite/analyze/constant_propagation.rs
assertion_line: 93
expression: copy_propagation
---

clobbered_across_mul

+------------------+
|      enter:      |
| {}               |
| mov rax, 1       |
| {rax: 1}         |
| mov rdx, 2       |
| {rax: 1, rdx: 2} |
| imul _a          |
| {}               |
| jmp exit         |
| {}               |
+------------------+
  |
  |
  v
+------------------+
|      exit:       |
| {}               |
| ret              |
| {}               |
+------------------+

