tests/suite/analyze/snapshots/suite__analyze__constant_propagation__defined_twice_different.snap
---
source: tests/suite/analyze/constant_propagation.rs
assertion_line: 132
expression: copy_propagation
---

     defined_twice_different

+--------------+     +------------+
| fallthrough: |     |            |
| {}           |     |   enter:   |
| mov _a, 1    |     | {}         |
| {_a: 1}      |     | jne branch |
| jmp exit     |     | {}         |
| {_a: 1}      | <-- |            |
+--------------+     +------------+
  |                    |
  |                    |
  |                    v
  |                  +------------+
  |                  |  branch:   |
  |                  | {}         |
  |                  | mov _a, 2  |
  |                  | {_a: 2}    |
  |                  | jmp exit   |
  |                  | {_a: 2}    |
  |                  +------------+
  |                    |
  |                    |
  |                    v
  |                  +------------+
  |                  |   exit:    |
  |                  | {}         |
  |                  | ret        |
  +----------------> | {}         |
                     +------------+

