tests/suite/analyze/snapshots/suite__analyze__constant_propagation__merge_many.snap
---
source: tests/suite/analyze/constant_propagation.rs
assertion_line: 158
expression: copy_propagation
---

                                               merge_many

+-----------------------+     +-------------------------------------+
|       branch3:        |     |                                     |
| {_a: 1}               |     |               enter:                |
| mov _c, 1             |     | {}                                  |
| {_a: 1, _c: 1}        |     | mov _a, 1                           |
| mov _d, 5             |     | {_a: 1}                             |
| {_a: 1, _c: 1, _d: 5} |     | jne branch3                         |
| jmp merge             |     | {_a: 1}                             |
| {_a: 1, _c: 1, _d: 5} | <-- |                                     |
+-----------------------+     +-------------------------------------+
  |                             |
  |                             |
  |                             v
  |                           +-------------------------------------+     +------------------------------+
  |                           |                                     |     |           branch2:           |
  |                           |                                     |     | {_a: 1, _b: 2}               |
  |                           |            fallthrough:             |     | mov _c, 2                    |
  |                           | {_a: 1}                             |     | {_a: 1, _b: 2, _c: 2}        |
  |                           | mov _b, 2                           |     | mov _d, 7                    |
  |                           | {_a: 1, _b: 2}                      |     | {_a: 1, _b: 2, _c: 2, _d: 7} |
  |                           | jne branch2                         |     | sub _d, _b                   |
  |                           | {_a: 1, _b: 2}                      |     | {_a: 1, _b: 2, _c: 2, _d: 5} |
  |                           |                                     |     | jmp merge                    |
  |                           |                                     | --> | {_a: 1, _b: 2, _c: 2, _d: 5} |
  |                           +-------------------------------------+     +------------------------------+
  |                             |                                           |
  |                             |                                           |
  |                             v                                           |
  |                           +-------------------------------------+       |
  |                           |              branch1:               |       |
  |                           | {_a: 1, _b: 2}                      |       |
  |                           | mov _c, 1                           |       |
  |                           | {_a: 1, _b: 2, _c: 1}               |       |
  |                           | mov _d, 3                           |       |
  |                           | {_a: 1, _b: 2, _c: 1, _d: 3}        |       |
  |                           | add _d, _b                          |       |
  |                           | {_a: 1, _b: 2, _c: 1, _d: 5}        |       |
  |                           | mov _e, 4                           |       |
  |                           | {_a: 1, _b: 2, _c: 1, _d: 5, _e: 4} |       |
  |                           | jmp merge                           |       |
  |                           | {_a: 1, _b: 2, _c: 1, _d: 5, _e: 4} |       |
  |                           +-------------------------------------+       |
  |                             |                                           |
  |                             |                                           |
  |                             v                                           |
  |                           +-------------------------------------+       |
  |                           |               merge:                |       |
  |                           | {_a: 1, _d: 5}                      |       |
  |                           | jmp exit                            |       |
  +-------------------------> | {_a: 1, _d: 5}                      | <-----+
                              +-------------------------------------+
                                |
                                |
                                v
                              +-------------------------------------+
                              |                exit:                |
                              | {_a: 1, _d: 5}                      |
                              | ret                                 |
                              | {_a: 1, _d: 5}                      |
                              +-------------------------------------+

